Переделал под требования, но тестов еще нет
