# docs/swagger.yaml
@@ -8,65 +8,65 @@ info:
   title: API на Go со Swagger
   version: "1.0"
 paths:
-  /api:
-    get:
-      responses: {}
-      summary: Главная страница
-      tags:
-      - Master
-  /api/auth/log:
-    post:
-      responses: {}
-      summary: Метод обработки авторизации
-      tags:
-      - Authorization
   /api/auth/login:
-    get:
+    post:
       responses: {}
-      summary: Страница авторизации
+      summary: Авторизация
       tags:
       - Authorization
-  /api/auth/reg:
+  /api/auth/refresh-token:
     post:
+      description: метод вызывается автоматически из функции-оболочки (AuthMiddleware)
+        при невалидном Accesstoken
       responses: {}
-      summary: Метод обработки регистрации
+      summary: Обновление токена
       tags:
-      - Registration
+      - Authorization
   /api/auth/register:
-    get:
-      responses: {}
-      summary: Страница регистрации
-      tags:
-      - Registration
-  /api/delete/{id}:
-    get:
-      description: Требует аутентификации.
-      responses: {}
-      summary: Удаление поста
-      tags:
-      - Posts
-  /api/pos:
     post:
-      description: 'Требует аутентификации. Функция для создания и изменения поста.
-        Сложная логика с картинками: при создании нужно выбрать будет картинка или
-        нет, а при изменении можно не менять.'
       responses: {}
-      summary: Обработка создания поста или изменения поста
+      summary: Регистрация
       tags:
-      - Posts
-  /api/post/{id}:
-    get:
-      description: Требует аутентификации.
-      responses: {}
-      summary: Страница редактирования поста
-      tags:
-      - Posts
+      - Authorization
   /api/posts:
     get:
-      description: Требует аутентификации. Проверяет роль. Если роль читателя, то
-        выдает сообщение и перенаправляет на главную страницу.
+      description: Требует аутентификации.
       responses: {}
-      summary: Страница создания поста
+      summary: Просмотр постов
+      tags:
+      - Viewing
+    post:
+      description: Требует аутентификации(Роль Автор).
+      responses: {}
+      summary: Создание поста
       tags:
       - Posts
+  /api/posts/{postId}:
+    put:
+      description: Требует аутентификации(Роль Автор).
+      responses: {}
+      summary: Редактирование поста
+      tags:
+      - Edit
+  /api/posts/{postId}/images:
+    post:
+      description: Требует аутентификации(Роль Автор).
+      responses: {}
+      summary: Добавление картинки к посту
+      tags:
+      - Images
+  /api/posts/{postId}/images/{imageId}:
+    delete:
+      description: Требует аутентификации(Роль Автор).
+      responses: {}
+      summary: Удаление картинки из поста
+      tags:
+      - Delete
+  /api/posts/{postId}/status:
+    patch:
+      description: Требует аутентификации(Роль Автор).
+      responses: {}
+      summary: Публикация поста
+      tags:
+      - Publish
 swagger: "2.0"
